--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -60,9 +60,9 @@
             <div class="block block-inverse block-fill-height app-header"
                  style="background-image: url({% static 'images/carousel01.jpg' %});">
                 <div class="container py-4 fixed-top app-navbar">
-                    <nav class="navbar navbar-transparent navbar-padded navbar-toggleable-sm">
+                    <nav class="navbar navbar-transparent navbar-padded navbar-expand-md">
                         <button
-                                class="navbar-toggler navbar-toggler-right hidden-md-up"
+                                class="navbar-toggler"
                                 type="button"
                                 data-target="#stage"
                                 data-toggle="stage"
@@ -74,7 +74,7 @@
                             <img src="{% static 'images/Logo_MyMensor_NEW3.svg' %}" width="120" height="120" alt="">
                         </a>
 
-                        <div class="hidden-sm-down text-uppercase">
+                        <div class="d-none d-md-block text-uppercase">
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
