--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -105,7 +105,7 @@
                     </nav>
                 </div>
 
-                <div class="block-foreground block-xs-middle pb-5">
+                <div class="block-xs-middle pb-5">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-10 col-lg-6">
