--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -110,7 +110,7 @@
                         <div class="row">
                             <div class="col-sm-10 col-lg-6">
                                 <h1 class="block-titleData frequency">{% trans "Simple and evidenced control." %}</h1>
-                                <p class="lead mb-4 text-muted">{% trans " Use images to control everything remotely <br> using an Android smartphone." %}</p>
+                                <p class="lead mb-4 text-white">{% trans " Use images to survey everything remotely using an Android smartphone." %}</p>
                                 <a id="registerbtn" class="btn btn-primary btn-lg registerbtn"
                                    href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
                                    role="button">{% trans "Trial free now!" %}</a>
