--- a/mymwebsite/static/css/mymwebsitestyle.css
+++ b/mymwebsite/static/css/mymwebsitestyle.css
@@ -40,3 +40,8 @@
   letter-spacing: 0px;
 }
 
+body { padding-top: 40px; }
+@media screen and (max-width: 768px) {
+    body { padding-top: 0px; }
+}
+
