--- a/mymwebsite/static/css/mymwebsitestyle.css
+++ b/mymwebsite/static/css/mymwebsitestyle.css
@@ -40,8 +40,7 @@
   letter-spacing: 0px;
 }
 
-body { padding-top: 0px; }
-@media screen and (max-width: 768px) {
-    body { padding-top: 40px; }
-}
-
+@media (max-width: 800px) {
+  .navbar-brand img {
+    max-width: 60px;
+    max-height: 60px; } }
