--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -164,7 +164,7 @@
                 <div class="container">
                     <div class="row app-align-center justify-content-start">
                         <div class="col-md-5 py-5" style="background-color: #a5d3ff">
-                            <h6 class="text-uppercase mb-2">{% trans "Control Made Simple" %}</h6>
+                            <h6 class="text-uppercase">{% trans "Control Made Simple" %}</h6>
                             <h3>{% trans "Simplify your control practices. Work with portability of information and reality." %}</h3>
                             <p class="lead mb-4">{% trans "Using our web application you have access to all your information anywhere, anytime. The reality will be portable for you to be transported to wherever you are." %}</p>
                             <a class="btn btn-secondary btn-lg btn-borderless" href="{% url 'docs' %}"
@@ -177,11 +177,11 @@
             <div class="block block-inverse block-parallax app-high-praise"
                  style="background-image: url({% static 'images/autosharing.jpg' %});">
                 <div class="container">
-                    <div class="row app-align-center py-3">
-                        <div class="col-sm-5 push-sm-7 py-5" style="background-color: #1DA1F2">
-                            <h6 class="text-muted text-uppercase">{% trans "Simplified Sharing" %}</h6>
+                    <div class="row app-align-center justify-content-start">
+                        <div class="col-md-5 py-5" style="background-color: #1DA1F2">
+                            <h6 class="text-uppercase">{% trans "Simplified Sharing" %}</h6>
                             <h3>{% trans " Share captures automatically via Twitter and Email." %}</h3>
-                            <p class="lead mb-4 text-muted">{% trans " Promote your work with the reliability of the MyMensor certification. Your customers and friends can easily check the location and date of the media capture, even without a MyMensor subscription." %}</p>
+                            <p class="lead mb-4">{% trans " Promote your work with the reliability of the MyMensor certification. Your customers and friends can easily check the location and date of the media capture, even without a MyMensor subscription." %}</p>
                             <a id="registerbtn" class="btn btn-secondary btn-lg btn-borderless registerbtn"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
                                role="button">{% trans "Trial free now!" %}</a>
@@ -193,14 +193,11 @@
             <div class="block block-foreground block-fill-height"
                  style="background-image: url({% static 'images/bigdata.jpg' %});">
                 <div class="container">
-                    <div class="row app-align-center">
-                        <div class="col-md-5 push-md-7">
-
-                        </div>
-                        <div class="col-md-6 pull-md-5 py-5" style="background-color: #a5d3ff">
-                            <h6 class="text-gray-dark text-uppercase">{% trans "Build your own bigdata" %}</h6>
+                    <div class="row app-align-center justify-content-start">
+                        <div class="col-md-5 py-5" style="background-color: #a5d3ff">
+                            <h6 class="text-uppercase">{% trans "Build your own bigdata" %}</h6>
                             <h3>{% trans "Use our web application to gather and view your data, in numerical and graphical ways." %}</h3>
-                            <p class="lead mb-4 text-gray-dark">{% trans "Using our web application you can stablish operational ranges, yellow and red alarm ranges. Export your data to a CSV file and use wherever you need it." %}</p>
+                            <p class="lead mb-4">{% trans "Using our web application you can stablish operational ranges, yellow and red alarm ranges. Export your data to a CSV file and use wherever you need it." %}</p>
                             <a class="btn btn-secondary btn-lg btn-borderless" href="{% url 'docs' %}"
                                role="button">{% trans "Read our docs" %}</a>
                         </div>
@@ -212,8 +209,8 @@
             <div class="block block-secondary app-block-marketing-grid">
                 <div class="container text-xs-center">
 
-                    <div class="row mb-5">
-                        <div class="col-xs-10 offset-xs-1 col-sm-8 offset-sm-2 col-lg-6 offset-lg-3">
+                    <div class="row mb-5 justify-content-center">
+                        <div class="col-10 col-sm-8 col-lg-6">
                             <h6 class="text-muted text-uppercase mb-2">{% trans "Inside MyMensor" %}</h6>
                             <h3 class="mb-4">{% trans "It's easy to see how we make your life more efficient every day." %}</h3>
                         </div>
@@ -276,7 +273,7 @@
             <div class="block app-price-plans">
                 <div class="container text-center">
 
-                    <div class="row mb-5">
+                    <div class="row mb-5 justify-content-center">
                         <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                             <h6 class="text-muted text-uppercase mb-2">{% trans "Business Talk" %}</h6>
                             <h3>{% trans "Simple plans. Direct and clear." %}</h3>
