--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -125,7 +125,7 @@
                 <div class="container">
                     <div class="row app-align-center">
 
-                        <div class="col-sm-5 d-none d-md-block">
+                        <div class="col-sm-5">
                             <a href="https://app.mymensor.com/landing/?type=1&key=cap/jorge/0_p_1499692368989.jpg&signature=93277C3614CA49FDC20E0CE4F0EA958E72AC9FC8B4CA1ACD575DBFF40E32D580"
                                target="_blank" data-toggle="tooltip" data-placement="top"
                                title="{% trans 'Click to see an example of what you can distribute to everybody!' %}">
