--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -163,7 +163,7 @@
                  style="background-image: url({% static 'images/carousel02.jpg' %});">
                 <div class="container">
                     <div class="row app-align-center justify-content-start">
-                        <div class="col-md-5 py-5" style="background-color: #a5d3ff">
+                        <div class="col-md-5 p-5" style="background-color: #a5d3ff">
                             <h6 class="text-uppercase">{% trans "Control Made Simple" %}</h6>
                             <h3>{% trans "Simplify your control practices. Work with portability of information and reality." %}</h3>
                             <p class="lead mb-4">{% trans "Using our web application you have access to all your information anywhere, anytime. The reality will be portable for you to be transported to wherever you are." %}</p>
@@ -178,7 +178,7 @@
                  style="background-image: url({% static 'images/autosharing.jpg' %});">
                 <div class="container">
                     <div class="row app-align-center justify-content-start">
-                        <div class="col-md-5 py-5" style="background-color: #1DA1F2">
+                        <div class="col-md-5 p-5" style="background-color: #1DA1F2">
                             <h6 class="text-uppercase">{% trans "Simplified Sharing" %}</h6>
                             <h3>{% trans " Share captures automatically via Twitter and Email." %}</h3>
                             <p class="lead mb-4">{% trans " Promote your work with the reliability of the MyMensor certification. Your customers and friends can easily check the location and date of the media capture, even without a MyMensor subscription." %}</p>
@@ -194,7 +194,7 @@
                  style="background-image: url({% static 'images/bigdata.jpg' %});">
                 <div class="container">
                     <div class="row app-align-center justify-content-start">
-                        <div class="col-md-5 py-5" style="background-color: #a5d3ff">
+                        <div class="col-md-5 p-5" style="background-color: #a5d3ff">
                             <h6 class="text-uppercase">{% trans "Build your own bigdata" %}</h6>
                             <h3>{% trans "Use our web application to gather and view your data, in numerical and graphical ways." %}</h3>
                             <p class="lead mb-4">{% trans "Using our web application you can stablish operational ranges, yellow and red alarm ranges. Export your data to a CSV file and use wherever you need it." %}</p>
