--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -123,18 +123,18 @@
 
             <div class="block block-secondary app-iphone-block">
                 <div class="container">
-                    <div class="row app-align-center">
+                    <div class="row app-align-center pb-5">
 
-                        <div class="col-sm-5">
+                        <div class="col-sm-6 pb-5">
                             <a href="https://app.mymensor.com/landing/?type=1&key=cap/jorge/0_p_1499692368989.jpg&signature=93277C3614CA49FDC20E0CE4F0EA958E72AC9FC8B4CA1ACD575DBFF40E32D580"
                                target="_blank" data-toggle="tooltip" data-placement="top"
                                title="{% trans 'Click to see an example of what you can distribute to everybody!' %}">
                                 <img class="app-iphone" src="{% static 'images/bragaportanova.jpeg' %}" alt=""
-                                     style="width: 120%;">
+                                     style="width: 100%;">
                             </a>
                         </div>
 
-                        <div class="col-md-6 col-sm-12 ml-auto">
+                        <div class="col-sm-6 ml-auto">
                             <h6 class="text-muted text-uppercase">{% trans "Certified Information" %}</h6>
                             <h3>{% trans "Turn captured images into certified information." %}</h3>
                             <p class="lead mb-4">{% trans "We combine smartphone mobility with database and security technologies to keep your information organized and accessible." %}</p>
@@ -274,7 +274,7 @@
                 <div class="container text-center">
 
                     <div class="row mb-5 justify-content-center">
-                        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+                        <div class="col-10 col-md-8 col-lg-6">
                             <h6 class="text-muted text-uppercase mb-2">{% trans "Business Talk" %}</h6>
                             <h3>{% trans "Simple plans. Direct and clear." %}</h3>
                         </div>
