--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -299,16 +299,16 @@
                                 <li class="py-4">
                                     <strong>{% trans "Certification" %}</strong>{% trans " time and location" %}</li>
                                 <li class="py-4">
-                                    <strong>{% trans "Sharing" %}</strong>{% trans " automatic sharing to Twitter and Email." %}
+                                    <strong>{% trans "Sharing" %}</strong>{% trans " automatic sharing to Twitter and Email" %}
                                 </li>
                                 <li class="py-4">
                                     <strong>{% trans "AR" %}</strong>{% trans " automatic and precise captures" %}</li>
                                 <li class="py-4"><strong>{% trans "Secure" %}</strong>{% trans " all HTTPS" %}</li>
                                 <li class="py-4">
-                                    <strong>{% trans "Mobile App" %}</strong>{% trans " use both MyMensor and MyMensorAR apps, you choose!" %}
+                                    <strong>{% trans "Mobile App" %}</strong>{% trans " download the MyMensorAR app an use it!" %}
                                 </li>
                                 <li class="py-4">
-                                    <strong>{% trans "Mobile App" %}</strong>{% trans " up to five installs per user (Two apps in the same device is one install!)" %}
+                                    <strong>{% trans "Mobile App" %}</strong>{% trans " up to five installs per user" %}
                                 </li>
                             </ul>
                             <a id="registerbtn" class="btn btn-primary btn-lg btn-block registerbtn"
