--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -76,7 +76,8 @@
                         <div class="d-none d-md-block text-uppercase">
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         {% trans "Learn" %}
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -189,6 +190,28 @@
                     </div>
                 </div>
             </div>
+
+            <div class="block block-secondary app-iphone-block">
+                <div class="container">
+                    <div class="row app-align-center pb-5">
+
+                        <div class="col-sm-5 mr-auto">
+                            <h6 class="text-muted text-uppercase">{% trans "Service Users and Certified Location" %}</h6>
+                            <h3>{% trans "Turn captured images into a certified path." %}</h3>
+                            <p class="lead mb-4">{% trans "You will get when, where your media was captured. All without complicated setups! Just create a service user, pass the info to whoever you want to capture media into your account and it is working!" %}</p>
+                        </div>
+
+                        <div class="col-sm-7 pb-5">
+                            <img class="app-iphone" src="{% static 'images/locationscreen.jpeg' %}" alt=""
+                                 style="width: 100%;">
+                        </div>
+
+
+                    </div>
+
+                </div>
+            </div>
+
 
             <div class="block block-foreground block-fill-height"
                  style="background-image: url({% static 'images/bigdata.jpg' %});">
