--- a/mymwebsite/static/css/mymwebsitestyle.css
+++ b/mymwebsite/static/css/mymwebsitestyle.css
@@ -44,3 +44,15 @@
   .navbar-brand img {
     max-width: 60px;
     max-height: 60px; } }
+
+@media (min-width: 992px) {
+    .modal-lg {
+        max-width: 800px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .modal-lg {
+        max-width: 1300px;
+    }
+}
