--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -403,7 +403,7 @@
              id="locationImageModal"
              tabindex="-1" role="dialog" aria-labelledby="locationImageModalLabel"
              aria-hidden="true">
-            <div class="modal-dialog modal-lg">
+            <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-body">
                         <img id="mediaContent" class="img-fluid"
