--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -67,12 +67,12 @@
     <body>
     <section id="fullwidenavigation" style="background-color: #e3f2fd;">
         <div class="container">
-            <nav class="navbar navbar-toggleable-sm navbar-light" style="background-color: #e3f2fd;" id="myNavbar">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;" id="myNavbar">
                 <a class="navbar-brand" href="{% url 'index' %}">
                     <img src="{% static 'images/Logo_MyMensor_NEW3.svg' %}" width="46" height="46" alt="">
                 </a>
                 <button type="button"
-                        class="navbar-toggler navbar-toggler-right"
+                        class="navbar-toggler"
                         data-toggle="collapse"
                         data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown"
