--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -67,7 +67,7 @@
     <body>
     <section id="fullwidenavigation" style="background-color: #e3f2fd;">
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;" id="myNavbar">
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;" id="myNavbar">
                 <a class="navbar-brand" href="{% url 'index' %}">
                     <img src="{% static 'images/Logo_MyMensor_NEW3.svg' %}" width="46" height="46" alt="">
                 </a>
