--- a/mymwebsite/templates/terms.html
+++ b/mymwebsite/templates/terms.html
@@ -109,7 +109,7 @@
         User Account. An email or phone request to cancel your User Account is not considered cancellation. You can
         cancel your User Account at any time in our Site. If you cancel your User Account before the end of your current
         paid up month, your cancellation will take effect immediately, and you will not be charged again. But there will
-        not be any prorating of unused time in the last billing cycle.{% endblocktrans %}</p>
+        not be any prorating of unused time in the last billing cycle. Nevertheless, you will be able to continue using the services up until the end of the last billing cycle.{% endblocktrans %}</p>
     <p class="text-justify">{% blocktrans %}(e) Prohibited Conduct: MyMensor specifically prohibits any use of the Site or the Service
         for: (i) posting any (1) information which is incomplete, false, inaccurate or not your own, (2) trade secrets
         or material that is copyrighted or otherwise owned by a third party unless you have a valid license from the
