--- a/mymwebsite/templates/privacy.html
+++ b/mymwebsite/templates/privacy.html
@@ -7,41 +7,51 @@
     <p></p>
     <p>{% trans "Last revision on June 2nd 2017." %}</p>
     <p></p>
-    <p class="text-justify">{% blocktrans %}This Privacy Policy sets forth MyMensor's policy with respect to information including
+    <p class="text-justify">{% blocktrans %}This Privacy Policy sets forth MyMensor's policy with respect to information
+        including
         personally identifiable data and other information that is collected from visitors to the Site and Services.
         This privacy policy governs your use of a software application (“Service”), including both a Mobile app running
         on mobile devices, and a Website application that runs on both mobile and desktop/laptop devices, that was
         created by Celtapps Software. {% endblocktrans %}</p>
     <h4 class="text-info text-capitalize">{% trans "Information collected and its use" %}</h4>
-    <p class="text-justify">{% blocktrans %}The Service obtains the information you provide when you download and register the Service
+    <p class="text-justify">{% blocktrans %}The Service obtains the information you provide when you download and
+        register the Service
         (“User Provided Data”). Registration is required to use our Service. When you register with us and use the
         Service, you provide: (a) an email address, an username and a password; (b) information you provide us when you
         contact us for help, and; (c) information you enter into our system when using the Service, such as images,
         videos, remarks and numerical data. We may also use the information you provided us to contact you from time to
-        time to provide you with important information, required notices and marketing promotions.{% endblocktrans %}</p>
-    <p class="text-justify">{% blocktrans %}In addition, the Service may collect certain information automatically (“Collected
+        time to provide you with important information, required notices and marketing
+        promotions.{% endblocktrans %}</p>
+    <p class="text-justify">{% blocktrans %}In addition, the Service may collect certain information automatically
+        (“Collected
         Information”), such as the type of mobile device you use, your mobile devices unique device ID, the IP address
         of your device, the geographic location of your device, your operating system, the type of Internet browsers you
         use, and information about the way you use the Service. Sometimes we aggregate user data anonymously to
         understand our customer base better.{% endblocktrans %}</p>
-    <p class="text-justify">{% blocktrans %}This Service collects information about the location of your device. We use your location
+    <p class="text-justify">{% blocktrans %}This Service collects information about the location of your device. We use
+        your location
         information to provide location certification services. You may at any time stop us from further allowing us to
         have access to your location data by disabling location services entirely, or specifically for the app, inside
         our app or on your mobile device.{% endblocktrans %}</p>
     <h4 class="text-info text-capitalize">{% trans "Data Retention Policy; Managing Your Information" %}</h4>
-    <p class="text-justify">{% blocktrans %}We will retain User Provided data for as long as you use the Service and for a reasonable
+    <p class="text-justify">{% blocktrans %}We will retain User Provided data for as long as you use the Service and for
+        a reasonable
         time thereafter. If you’d like to delete User Provided Data that you have provided via the Service, you can do
         so inside our mobile app and inside our web app, for the relevant portions of information, furthermore, if you
         want to completely wipe all information from our servers please contact us at support@mymensor.com and we will
         respond in a reasonable time. Please note that some or all of the User Provided Data may be required in order
-        for the Service to function properly, and we may be required to retain certain information by law.{% endblocktrans %}</p>
+        for the Service to function properly, and we may be required to retain certain information by
+        law.{% endblocktrans %}</p>
     <h4 class="text-info text-capitalize">{% trans "Third-Party Payment Processor" %}</h4>
-    <p class="text-justify">{% blocktrans %}We use a third party payment processor to process payments made to us. In connection with
+    <p class="text-justify">{% blocktrans %}We use a third party payment processor to process payments made to us. In
+        connection with
         the processing of such payments, we do not retain any personally identifiable information or any financial
         information such as credit card numbers. All such information is provided directly to our third party processor,
-        whose use of your personal information is governed by their privacy policy (https://www.paypal.com/pt/webapps/mpp/ua/privacy-full?locale.x=en_PT).{% endblocktrans %}</p>
+        whose use of your personal information is governed by their privacy policy
+        (https://www.paypal.com/pt/webapps/mpp/ua/privacy-full?locale.x=en_PT).{% endblocktrans %}</p>
     <h4 class="text-info text-capitalize">{% trans "Third parties access to information obtained by the Service" %}</h4>
-    <p class="text-justify">{% blocktrans %}We will share your information with third parties only in the ways that are described in
+    <p class="text-justify">{% blocktrans %}We will share your information with third parties only in the ways that are
+        described in
         this privacy statement. We may disclose collected Information, in the following manners: (a) as required by law,
         such as to comply with a subpoena, or similar legal process; (b) when we believe in good faith that disclosure
         is necessary to protect our rights, protect your safety or the safety of others, investigate fraud, respond to a
@@ -51,25 +61,30 @@
         change in ownership or uses of this information, as well as any choices you may have regarding this
         information.{% endblocktrans %}</p>
     <h4 class="text-info text-capitalize">{% trans "Cookies" %}</h4>
-    <p class="text-justify">{% trans "Cookies are small pieces of text used to store information on web browsers." %}
-        {% trans "They\’re used by many websites to store and receive identifiers and other information on devices, such as a handheld phone or computer. "%}
-        {% trans "Our site and services use cookies and other similar technologies, in order to provide a better service to you and to generally improve our sites and services." %}
-        {% trans "Some portions of our websites are functional without cookies, and you may generally choose whether to accept cookies. "%}
-        {% trans "Most web browsers are set to accept cookies by default, however, you may be able to delete cookiesyourself through your browser\'s cookie manager." %}
-        {% trans "To do so, please follow the instructions provided by your web browser. "%}
-        {% trans "Please note that disabling cookies will reset your session, disable auto-login, and may adversely affect the availability and functionality of our websites and the services we can provide to you." %}</p>
+    <p class="text-justify">{% blocktrans %}Cookies are small pieces of text used to store information on web browsers.
+        They are used by many websites to store and receive identifiers and other information on devices, such as a
+        handheld phone or computer. Our site and services use cookies and other similar technologies, in order to
+        provide a better service to you and to generally improve our sites and services. Some portions of our websites
+        are functional without cookies, and you may generally choose whether to accept cookies. Most web browsers are
+        set to accept cookies by default, however, you may be able to delete cookiesyourself through your browser\'s
+        cookie manager. To do so, please follow the instructions provided by your web browser. Please note that
+        disabling cookies will reset your session, disable auto-login, and may adversely affect the availability and
+        functionality of our websites and the services we can provide to you.{% endblocktrans %}</p>
     <h4 class="text-info text-capitalize">{% trans "Children" %}</h4>
-    <p class="text-justify">{% blocktrans %}One must be 13 years old to use MyMensor. We do not use the Service to knowingly solicit
+    <p class="text-justify">{% blocktrans %}One must be 13 years old to use MyMensor. We do not use the Service to
+        knowingly solicit
         data from or market to children under the age of 13. If a parent or guardian becomes aware that his or her child
         has provided us with information without their consent, he or she should contact us at support@mymensor.com. We
         will delete such information from our files within a reasonable time.{% endblocktrans %}</p>
     <h4 class="text-info text-capitalize">{% trans "Security" %}</h4>
-    <p class="text-justify">{% blocktrans %}MyMensor takes reasonable steps to protect your information from loss, misuse, and
+    <p class="text-justify">{% blocktrans %}MyMensor takes reasonable steps to protect your information from loss,
+        misuse, and
         unauthorized access, disclosure, alteration, or destruction. However, no Internet or email transmission is ever
         fully secure or error free. In particular, email sent to or from us may not be secure. Therefore, you should
         take special care in deciding what information you send to us via email. Please keep this in mind when
         disclosing any information to MyMensor.{% endblocktrans %}</p>
     <h4 class="text-info text-capitalize">{% trans "Contact" %}</h4>
-    <p class="text-justify">{% blocktrans %}If you have any questions regarding privacy while using the Service, or have questions about
+    <p class="text-justify">{% blocktrans %}If you have any questions regarding privacy while using the Service, or have
+        questions about
         our practices, please contact us via email at support@mymensor.com.{% endblocktrans %}</p>
 {% endblock %}
