--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -162,7 +162,7 @@
     <script src="{% static "js/jquery-eu-cookie-law-popup.js" %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static "js/ie10-viewport-bug-workaround.js" %}"></script>
-    <script>
+    <script type="text/javascript">
         var btns = document.getElementsByClassName('registerbtn');
         var btnslength = btns.length;
         for (var i = 0; i < btnslength; i++) {
