--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -414,7 +414,7 @@
         </div>
     {% endblock %}
     {% block javascript %}
-        <script>
+        <script type="text/javascript">
             $(document).ready(function () {
                 if ($(".eupopup").length > 0) {
                     $(document).euCookieLawPopup().init({
