--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -207,7 +207,7 @@
     <script src="{% static "js/social-share-kit.js" %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static "js/ie10-viewport-bug-workaround.js" %}"></script>
-    <script>
+    <script type="text/javascript">
         var btns = document.getElementsByClassName('registerbtn');
         var btnslength = btns.length;
         for (var i = 0; i < btnslength; i++) {
