--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -9,7 +9,7 @@
                  alt={% trans "Pinocchio sitting over a mobile phone." %}>
             <div class="card-body p-3">
                 <h4 class="card-title">{% trans "General Use for MyMensor" %}</h4>
-                <p class="card-text">{% trans "General Purpose Use for the MyMensor Media Plan" %}</p>
+                <p class="card-text">{% trans "General purpose use for the MyMensor Media Plan" %}</p>
             </div>
         </div>
         <div id="followingremotejobs" class="card m-3 card-outline-secondary w-25">
@@ -17,7 +17,7 @@
                  alt={% trans "Staging for producing a fake photo." %}>
             <div class="card-body p-3">
                 <h4 class="card-title">{% trans "Following Jobs Remotely" %}</h4>
-                <p class="card-text">{% trans "Following Jobs Remotely with the MyMensor Media Plan and Media and Data Plan" %}</p>
+                <p class="card-text">{% trans "Following jobs remotely with the MyMensor Media Plan, Media and Data Plan" %}</p>
             </div>
         </div>
 
