--- a/mymwebsite/templates/videos.html
+++ b/mymwebsite/templates/videos.html
@@ -3,9 +3,7 @@
 {% get_current_language as LANGUAGE_CODE %}
 {% block title %}Videos - {{ block.super }}{% endblock %}
 {% block content %}
-    <p></p>
-    <h3>Videos</h3>
-    <p></p>
+    <h1 class="mt-5 mb-5 ml-4">{% trans "Videos" %}</h1>
     <hr>
     <h4>{% trans "Explainer Video" %}</h4>
     <p></p>
