--- a/mymwebsite/templates/cases/followingremotejobs.html
+++ b/mymwebsite/templates/cases/followingremotejobs.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "Cases" %} - {{ block.super }}{% endblock %}
 {% block content %}
     <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
-        <h1 class="pb-3">{% trans "Following Jobs Remotely with the MyMensor Media Plan, Media and Data Plan" %}</h1>
+        <h1 class="pb-3">{% trans "Following Jobs Remotely" %}</h1>
         <img class="card-img-top img-fluid pb-3" src="{% static 'images/followingremotejobs.jpg' %}"
              alt={% trans "Staging for producing a fake photo." %}>
         <p>{% trans "I have a friend that is a very successful accountant in an European country. Once he told me a tale of a client who <mark>invested in the construction of an apartment building in Africa.</mark> " %}</p>
