--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -10,8 +10,8 @@
             <img class="card-img-top img-fluid" src="{% static 'images/genusemediaplan.jpg' %}"
                  alt={% trans "Pinocchio sitting over a mobile phone." %}>
             <div class="card-body p-3">
-                <h4 class="card-title">{% trans "General Use for MyMensor " %}</h4>
-                <p class="card-text">{% trans "General purpose use for the MyMensor Media Plan" %}</p>
+                <h4 class="card-title">{% trans "Making Sure that a Photo os NOT a Fake" %}</h4>
+                <p class="card-text">{% trans "On this day and age, how can one be sure that a photo is not a fake? Of course there are a number of very sofisticated methods to assure that, with a high confidence percentage. But if we knew, for sure, how the photo was taken? Is it not an easier solution?" %}</p>
             </div>
         </div>
         <div id="followingremotejobs" class="card m-3 card-outline-secondary" style="width: 22rem;">
@@ -19,7 +19,7 @@
                  alt={% trans "Staging for producing a fake photo." %}>
             <div class="card-body p-3">
                 <h4 class="card-title">{% trans "Following Jobs Remotely " %}</h4>
-                <p class="card-text">{% trans "Following jobs remotely with the MyMensor Media Plan, Media and Data Plan" %}</p>
+                <p class="card-text">{% trans "One cannot be in more than one place at the same time, sure? Not quite, if we use the technology that is available right now!" %}</p>
             </div>
         </div>
         <div id="usingyourowndata" class="card m-3 card-outline-secondary" style="width: 22rem;">
