--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -10,7 +10,7 @@
             <img class="card-img-top img-fluid" src="{% static 'images/genusemediaplan.jpg' %}"
                  alt={% trans "Pinocchio sitting over a mobile phone." %}>
             <div class="card-body p-3">
-                <h4 class="card-title">{% trans "Making Sure that a Photo os NOT a Fake" %}</h4>
+                <h4 class="card-title">{% trans "Making Sure that a Photo is NOT a Fake" %}</h4>
                 <p class="card-text">{% trans "On this day and age, how can one be sure that a photo is not a fake? Of course there are a number of very sofisticated methods to assure that, with a high confidence percentage. But if we knew, for sure, how the photo was taken? Is it not an easier solution?" %}</p>
             </div>
         </div>
