--- a/mymwebsite/templates/cases/genusemediaplan.html
+++ b/mymwebsite/templates/cases/genusemediaplan.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "Cases" %} - {{ block.super }}{% endblock %}
 {% block content %}
     <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
-        <h1 class="pb-3">{% trans "General Purpose Use for the MyMensor Media&nbsp;Plan" %}</h1>
+        <h1 class="pb-3">{% trans "Making Sure that a Photo is NOT a Fake" %}</h1>
         <img class="card-img-top img-fluid pb-3" src="{% static 'images/genusemediaplan.jpg' %}"
                  alt={% trans "Pinocchio sitting over a mobile phone." %}>
         <p>{% trans "Since we have created the first version of SeaMensor (that was the “father” of MyMensor), our friends ask us: - What can I do with this piece of software that I cannot do with my phone camera already?" %}</p>
