--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -27,7 +27,7 @@
                  alt={% trans "Staging for producing a fake photo." %}>
             <div class="card-body p-3">
                 <h4 class="card-title">{% trans "Using <u>Your</u> Own Data for <u>Your</u> Own Benefit " %}</h4>
-                <p class="card-text">{% trans "Do like all big tech corporations are doing. They are using <u>your</u> data for <u>their</u> benefit, and most of the time we cannot prevent that. <mark>But we can use our own data for our own benefit, can\'t we?</mark>. " %}</p>
+                <p class="card-text">{% trans "Do like all big tech corporations are doing. They are using <u>your</u> data for <u>their</u> benefit, and most of the time we cannot prevent that. <mark>But we can use our own data for our own benefit, can't we?</mark>. " %}</p>
             </div>
         </div>
     </div>
